--- a/wiki/ProgramGuide.wiki
+++ b/wiki/ProgramGuide.wiki
@@ -14,6 +14,26 @@ iteye相关文章：
  * 整个BeanMapping是采用微内核的设计，自身的一些功能点也是通过ValueProcess插件.
 
 ==Get/Set设计==
+ # Get操作抽象为GetExecutor
+  * !FieldGetExecutor
+  * !MapGetExecutor
+  * !PropertyGetExecutor
+  * !ThisSymbolGetExecutor
+ # Set操作抽象为SetExecutor
+  * !FieldSetExecutor
+  * !MapSetExecutor
+  * !PropertySetExecutor
+*说明：*
+ # GetExecutor/SetExecutor的选择处理，客户端可通过Uberspector进行获取
+{{{
+Uberspector.getInstance().getGetExecutor(Class locatorClass, Object identifier)
+Uberspector.getInstance().getSetExecutor(Class locatorClass, Object identifier, Class arg)
+}}}
+ # Executor的抽象，允许自定义新的Get/Set操作处理，比如Factory模式的支持等，扩展相对比较容易
+===实现自定义Get/SetExecutor===
+TODO
+
+*相关类图设计*
 [http://dl.iteye.com/upload/attachment/510028/4c121cbd-7c5e-3fa3-b073-6c44a72e68d8.png]
 
 ==!ValueProcess设计==
@@ -28,7 +48,7 @@ iteye相关文章：
 *相关类图设计：*
 [http://dl.iteye.com/upload/attachment/510030/23dde9a4-582a-3567-b4b1-a416234f95ec.png]
 
-==实现自定义!ValueProcess==
+===实现自定义!ValueProcess===
 *!ValueProcess接口:*
 {{{
 public interface ValueProcess {
@@ -60,3 +80,56 @@ public class CustomValueProcess implements ValueProcess {
  # ValueProcessInvocation: 为!ValueProcess的调度控制器
   * invocation.getContext(): 可获取ValueProcessContext对象
   * invocation.proceed(value)： 传递给chian !ValueProcess的下一个节点
+
+==客户端设计==
+[http://dl.iteye.com/upload/attachment/510072/6e837a9c-94d7-3ed1-8c1f-9c5d1b59e9ac.png]
+ * BeanMapping :  本轮子的核心功能，通过基于配置方式的mapping映射，支持convetor,defaultValue,script的所有功能。要求使用之前必须提前配置bean-mapping映射。
+ * BeanCopy 和 BeanMap ： 都是一些扩展功能，基于本轮子的核心架构不变的基础上，开发了BeanUtils.copyProperties() , BeanUtils.describe,  BeanUtils.populate()的功能。 使用该api，可以不需要配置映射文件，会进行自动扫描，就是基于同名属性的处理前提。
+ * BeanMappingUtil ： 提供了BeanMapping , BeanCopy , BeanMap的所有方法，提供静态的util方法处理。每次都会构造对应的BeanMapping等对象，注意：每次进行构造BeanCopy,BeanMap，解析的属性结果会有cache。所以使用该util不会有很明显的性能下降，无非就是多一些临时对象。
+
+=性能测试=
+一个产品不管功能说的如何天花乱坠，整个工具的性能相比也是大家比较会关注的一个点。<br/>
+性能测试case：构造一个CopyBean，基本涵盖了普通类型，对象处理等，进行批量处理
+{{{
+public class CopyBean {  
+  
+        private int        intValue;  
+        private boolean    boolValue;  
+        private float      floatValue;  
+        private double     doubleValue;  
+        private long       longValue;  
+        private char       charValue;  
+        private byte       byteValue;  
+        private short      shortValue;  
+        private Integer    integerValue;  
+        private Boolean    boolObjValue;  
+        private Float      floatObjValue;  
+        private Double     doubleObjValue;  
+        private Long       longObjValue;  
+        private Short      shortObjValue;  
+        private Byte       byteObjValue;  
+        private BigInteger bigIntegerValue;  
+        private BigDecimal bigDecimalValue;  
+        private String     stringValue;  
+} 
+}}}
+
+BeanCopy性能测试，对比的内容：
+ # BeanCopy.copy 
+ # Method.invoke
+ # FastMethod.invoke 
+ # BulkBean
+ # BeanCopier
+ # HardCode (硬编码，直接手工挨个复制属性)
+ # PropertyUtils  (不做类型转化)
+ # BeanUtils
+
+*测试结果：*
+[http://dl.iteye.com/upload/attachment/496355/2b29ad34-a6fe-3da1-a3d0-b0d82fd6750c.png]
+*相关说明：*
+ 因为beanUtils，PropertyUtils的性能太差，基本上其他的柱状图都看不清楚。
+
+[http://dl.iteye.com/upload/attachment/496357/a8752fbc-d83b-3fb9-a50a-8eee7c9ac151.png]
+
+*相关说明：*
+ 排除了PropertyUtils/BeanUtils的性能对比图，发现BeanMapping提供的copy方法可以比直接Method的反射调用略快一点，不过和cglib的BeanCopier还是有点差距，毕竟人家的功能支持的也很简单，很裸露的get/set调用。性能上基本也和直接硬编码写copy操作一样。
