--- a/wiki/ProgramGuide.wiki
+++ b/wiki/ProgramGuide.wiki
@@ -115,14 +115,14 @@ public class CopyBean {
 }}}
 
 BeanCopy性能测试，对比的内容：
- # BeanCopy.copy 
- # Method.invoke
- # FastMethod.invoke 
- # BulkBean
- # BeanCopier
- # HardCode (硬编码，直接手工挨个复制属性)
- # PropertyUtils  (不做类型转化)
- # BeanUtils
+ # !BeanCopy.copy 
+ # !Method.invoke
+ # !FastMethod.invoke 
+ # !BulkBean
+ # !BeanCopier
+ # !HardCode (硬编码，直接手工挨个复制属性)
+ # !PropertyUtils  (不做类型转化)
+ # !BeanUtils
 
 *测试结果：*
 [http://dl.iteye.com/upload/attachment/496355/2b29ad34-a6fe-3da1-a3d0-b0d82fd6750c.png]
@@ -133,3 +133,21 @@ BeanCopy性能测试，对比的内容：
 
 *相关说明：*
  排除了PropertyUtils/BeanUtils的性能对比图，发现BeanMapping提供的copy方法可以比直接Method的反射调用略快一点，不过和cglib的BeanCopier还是有点差距，毕竟人家的功能支持的也很简单，很裸露的get/set调用。性能上基本也和直接硬编码写copy操作一样。
+
+
+具体测试数据：
+|| ||*开启batch优化(200w次):单位ns*||*纯解释执行(排除JIT优化)(10w次):单位ns*||
+||!BeanMapping.copy||1189||72780||
+||!Method||1322||25882||
+||!FastMethod||533||15961||
+||!BulkBean||108||4420||
+||!BeanCopier||18||1566||
+||!HardCopy||17||1376||
+||!PropertyUtils||22143||1037770||
+||!BeanUtils||43980||1766392||
+
+*相关说明：*
+ * 首先注意一下，单位是ns。　1s=1000ms=1*10^9 ns
+ * BeanCopier和手工编码写的copy性能基本接近
+ * BeanMapping的copy和simpleCopy的区别，copy可以支持类型转化，simpleCopy不会处理类型转化。
+ * BeanMapping的性能是BeanUtils的近40倍左右，不过和BeanCopier还是有些差距，大概在50倍左右。 (换另一个概念，就是执行100w次，BeanCopier可以比BeanMapping节省1秒，可以比BeanUtils节省40多秒，比较直观吧)
