--- a/wiki/Source.wiki
+++ b/wiki/Source.wiki
@@ -1,5 +1,7 @@
 This code is hosted in git and can be checked out using the following command:
- * {{{git clone git://github.com/com:agapple/mapping4java.git}}}
+{{{
+git clone git://github.com/com:agapple/mapping4java.git
+}}}
 
 You can browse or fork the repo at github.
  * https://github.com/agapple/mapping4java
